--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,9 @@
 
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post
-        </h1>
+        <h1>ESTE SERA LA CABECERA DE PRUEBA </h1>
+        <h2>Aqui vamos a hacer un blog post
+        </h2>
         <p>Este es el primer parafo de inicio</p>
     </body>
 </html>
