añadimos un parrafo y cambiamos el color

--- a/blog.html
+++ b/blog.html
@@ -9,5 +9,6 @@
         <h2>Aqui vamos a hacer un blog post
         </h2>
         <p>Este es el primer parafo de inicio</p>
+        <p> Este es el segundo parrafo que vamos a modificar y corregir</p>
     </body>
 </html>
