--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>refood</title>
+        <title>repostería</title>
         <link rel="stylesheet" href="css/estilos.css"/>
 
     </head>
